Polishing on unix slides

--- a/lectures/unix/slides.tex
+++ b/lectures/unix/slides.tex
@@ -2,13 +2,16 @@
     \documentclass[handout]{beamer}
 \else
     \documentclass{beamer}
-    \setbeamercovered{transparent}
+    % \setbeamercovered{transparent}
 \fi
 
 \includeonly{unix}
 
 \usepackage{selthcsslides}
+% \usepackage{selthcsslides}
 \usecolortheme{lucolors}
+
+\usepackage{../../latex-support/beamerutil}
 
 % The Madrid theme, for some reason, does not show bullet points in itemize
 % environments. This is a workaround to fix that.
