--- a/lectures/unix/slides.tex
+++ b/lectures/unix/slides.tex
@@ -2,7 +2,7 @@
     \documentclass[handout]{beamer}
 \else
     \documentclass{beamer}
-    % \setbeamercovered{transparent}
+    \setbeamercovered{transparent}
 \fi
 
 \includeonly{unix}
